# SoundGen

./: .gitignore  CMakeLists.txt  genCB.bat  genclang.sh  genvs2012.bat  genvs2013.bat
include/: Guitar.hpp  Instrument.hpp  Partition.hpp  SFMLSoundStream.hpp  SingleLinePartition.hpp  Synthesizer.hpp
src/: Guitar.cpp  SFMLSoundStream.cpp  Synthesizer.cpp  main.cpp
